[package]
name = "anyrun-plugin"
version = "0.1.1"
edition = "2021"
description = "The crate for building plugins for Anyrun"
license = "GPL-3.0"
homepage = "https://github.com/anyrun-org/plugin"
repository = "https://github.com/anyrun-org/plugin"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.1"
anyrun-interface = "0.1.1"
anyrun-macros = "0.1.1"
